# vcable

./: CMakeLists.txt  README.rst  plugin.h.in
CMake/: FindLADSPA.cmake
hosts/: CMakeLists.txt
hosts/ladspa/: CMakeLists.txt  ladspa.c
src/: CMakeLists.txt  config.h.in  samplebuffer.h  vcable.c  vcable.h
src/plugins/: CMakeLists.txt
src/plugins/jack/: CMakeLists.txt  jack.c
